# estuary-rpc

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel  client.package.json  coverage.json  index.html  jest.config.js  package-lock.json  package.json  server.package.json  tsconfig.json  typedoc.json
assets/: highlight.css  search.js
classes/: estuary_rpc.Duplex.html  estuary_rpc.Stream.html  estuary_rpc_client.Duplex.html  estuary_rpc_client.Stream.html  estuary_rpc_server.Duplex.html  estuary_rpc_server.MultiPartParser.html  estuary_rpc_server.Stream.html
coverage/: clover.xml  coverage-final.json  coverage-summary.json  index.html  lcov.info
docs/: index.html  modules.html
enums/: estuary_rpc.TransportType.html  estuary_rpc_client.TransportType.html  estuary_rpc_server.TransportType.html
estuary-rpc/: README.md  api.ts  openApi.test.ts  openApi.ts  package.json  statusCodes.ts  stream.test.ts  stream.ts  tsconfig.json  types.ts
estuary-rpc-client/: README.md  client.test.ts  client.ts  package.json  tsconfig.json
estuary-rpc-server/: README.md  authentication.test.ts  authentication.ts  errors.ts  middleware.ts  multipart.test.ts  multipart.ts  package-lock.json  package.json  rest.ts  server.ts  tsconfig.json  types.ts  ws.ts  wsDataFrame.ts
example/: package.json
functions/: estuary_rpc.createOpenApiSpec.html  estuary_rpc.del.html  estuary_rpc.get.html  estuary_rpc.openStreamHandler.html  estuary_rpc.post.html  estuary_rpc.put.html  estuary_rpc.ws.html  estuary_rpc_client.createApiClient.html  estuary_rpc_client.createOpenApiSpec.html  estuary_rpc_client.del.html  estuary_rpc_client.get.html  estuary_rpc_client.getUrl.html  estuary_rpc_client.openStreamHandler.html  estuary_rpc_client.post.html  estuary_rpc_client.put.html  estuary_rpc_client.superFetch.html  estuary_rpc_client.ws.html  estuary_rpc_server.automaticMiddleware.html  estuary_rpc_server.createApiServer.html  estuary_rpc_server.createErrorHandlers.html  estuary_rpc_server.createOpenApiSpec.html  estuary_rpc_server.createRestServer.html  estuary_rpc_server.createWsServer.html  estuary_rpc_server.del.html  estuary_rpc_server.errorResponse-1.html  estuary_rpc_server.get.html  estuary_rpc_server.getUrl.html  estuary_rpc_server.methodId.html  estuary_rpc_server.openStreamHandler.html  estuary_rpc_server.parseIncoming.html  estuary_rpc_server.post.html  estuary_rpc_server.put.html  estuary_rpc_server.restEndpoint.html  estuary_rpc_server.restResponse.html  estuary_rpc_server.serveStatic.html  estuary_rpc_server.staticFileMiddleware.html  estuary_rpc_server.ws.html  estuary_rpc_server.wsEndpoint.html
interfaces/: estuary_rpc.Api.html  estuary_rpc.Decoder.html  estuary_rpc.Encoder.html  estuary_rpc.InStream.html  estuary_rpc.OpenApiMeta.html  estuary_rpc.OutStream.html  estuary_rpc.SimpleMeta.html  estuary_rpc_client.Api.html  (+16 more)
(+377 files in other folders)
