load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")

npm_link_all_packages()

ts_project(
    name = "common",
    srcs = glob([
        "src/common/**/*.ts",
    ]),
    declaration = True,
    deps = [],
)

ts_project(
    name = "client",
    srcs = glob([
        "src/client/**/*.ts",
    ]),
    declaration = True,
    deps = [
        ":common"
    ],
    tsconfig = {
        "compilerOptions": {
            "lib": ["dom", "es2015"],
        },
    },
)

ts_project(
    name = "server",
    srcs = glob([
        "src/server/**/*.ts",
    ]),
    declaration = True,
    deps = [
        ":common",
        "//:node_modules/@types/node",
    ],
)

npm_package(
  name = "estuary-rpc",
  srcs = [":common", "package.json", "README.md"],
)
npm_package(
  name = "estuary-rpc-client",
  srcs = [":client", "client.package.json", "README.md"],
  replace_prefixes = {"client.": ""}
)

npm_package(
  name = "estuary-rpc-server",
  srcs = [":server", "server.package.json", "README.md"],
  replace_prefixes = {"server.": ""}
)